--- a/Weekly_Scoring.ipynb
+++ b/Weekly_Scoring.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled70.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNQzZ+zkXmJKvKiDGLX3LP1",
+      "authorship_tag": "ABX9TyMtiSEUAwGtl45OKd9MnG7K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "W3dS7zgVgYgx",
         "colab_type": "code",
-        "outputId": "77dc8576-0cdc-4195-ebd7-5ad0cb02f05e",
+        "outputId": "ecae5021-bbe4-4b90-a33b-86121e1f204c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 306
@@ -280,7 +280,7 @@
       "metadata": {
         "id": "NZpgAmLdhG8A",
         "colab_type": "code",
-        "outputId": "27d61be1-97dc-4a38-ae0c-88f8ca9cabba",
+        "outputId": "e504bb64-e347-437a-acd6-7b5db1e97ad8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -478,7 +478,7 @@
       "metadata": {
         "id": "lTzhZKyohYbu",
         "colab_type": "code",
-        "outputId": "cf7078d7-9666-4b97-ee00-a9fcfba68194",
+        "outputId": "385e4a31-6ca9-40f4-d98b-8f2557c209ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -658,7 +658,7 @@
       "metadata": {
         "id": "62ODdcfVcCzC",
         "colab_type": "code",
-        "outputId": "459fb7ef-879d-4c92-a861-489c8569996b",
+        "outputId": "673cb249-2c5e-4cae-f310-b3e4e2c21630",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -847,8 +847,8 @@
         "colab": {}
       },
       "source": [
-        "def pull_stats(df, col, p, w):\n",
-        "    # Passing TD\n",
+        "def pull_stats(df, col, p, w, o):\n",
+        "    opp = o\n",
         "    if (df[col].loc[(df['Player']==p) & (df['Week']==w)].empty):\n",
         "        stat = 0\n",
         "    else:\n",
@@ -868,52 +868,28 @@
       },
       "source": [
         "def scoring(p, w):\n",
-        "    opponent = 'None'\n",
+        "    opponent = 'Bye'\n",
         "\n",
         "    # Passing TD\n",
-        "    if (qb_df['Pass TD'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].empty):\n",
-        "        pass_td = 0\n",
-        "    else:\n",
-        "        pass_td = qb_df['Pass TD'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].iloc[0]\n",
-        "        opponent = qb_df['Opp'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].iloc[0]\n",
+        "    pass_td, opponent = pull_stats(qb_df, 'Pass TD', p, w, opponent)\n",
         "\n",
         "    # Receiving TD\n",
-        "    if (rec_df['Rec TD'].loc[(rec_df['Player']==p) & (rec_df['Week']==w)].empty):\n",
-        "        rec_td = 0\n",
-        "    else:\n",
-        "        rec_td = rec_df['Rec TD'].loc[(rec_df['Player']==p) & (rec_df['Week']==w)].iloc[0]\n",
-        "        opponent = rec_df['Opp'].loc[(rec_df['Player']==p) & (rec_df['Week']==w)].iloc[0]\n",
+        "    rec_td, opponent = pull_stats(rec_df, 'Rec TD', p, w, opponent)\n",
         "\n",
         "    # Rushing TD\n",
-        "    if (rush_df['Rush TD'].loc[(rush_df['Player']==p) & (rush_df['Week']==w)].empty):\n",
-        "        rush_td = 0\n",
-        "    else:\n",
-        "        rush_td = rush_df['Rush TD'].loc[(rush_df['Player']==p) & (rush_df['Week']==w)].iloc[0]\n",
-        "        opponent = rush_df['Opp'].loc[(rush_df['Player']==p) & (rush_df['Week']==w)].iloc[0]\n",
+        "    rush_td, opponent = pull_stats(rush_df, 'Rush TD', p, w, opponent)\n",
         "  \n",
         "    # Passing Yards\n",
-        "    if (qb_df['Pass Yds'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].empty):\n",
-        "        pass_yds = 0\n",
-        "    else:\n",
-        "        pass_yds = qb_df['Pass Yds'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].iloc[0]\n",
+        "    pass_yds, opponent = pull_stats(qb_df, 'Pass Yds', p, w, opponent)\n",
         "\n",
         "    # Receiving Yards\n",
-        "    if (rec_df['Rec Yds'].loc[(rec_df['Player']==p) & (rec_df['Week']==w)].empty):\n",
-        "        rec_yds = 0\n",
-        "    else:\n",
-        "        rec_yds = rec_df['Rec Yds'].loc[(rec_df['Player']==p) & (rec_df['Week']==w)].iloc[0]\n",
+        "    rec_yds, opponent = pull_stats(rec_df, 'Rec Yds', p, w, opponent)\n",
         "\n",
         "    # Rushing Yards\n",
-        "    if (rush_df['Rush Yds'].loc[(rush_df['Player']==p) & (rush_df['Week']==w)].empty):\n",
-        "        rush_yds = 0\n",
-        "    else:\n",
-        "        rush_yds = rush_df['Rush Yds'].loc[(rush_df['Player']==p) & (rush_df['Week']==w)].iloc[0]\n",
+        "    rush_yds, opponent = pull_stats(rush_df, 'Rush Yds', p, w, opponent)\n",
         "\n",
         "    # Interceptions\n",
-        "    if (qb_df['Pass Int'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].empty):\n",
-        "        qb_int = 0\n",
-        "    else:\n",
-        "        qb_int = qb_df['Pass Int'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].iloc[0]\n",
+        "    qb_int, opponent = pull_stats(qb_df, 'Pass Int', p, w, opponent)\n",
         "\n",
         "    score = (pass_td * 4) + (rec_td * 6) + (rush_td * 6) + (pass_yds / 25) + (rec_yds / 10) + (rush_yds / 10) - (qb_int *2)\n",
         "    return score, opponent"
@@ -941,7 +917,7 @@
       "metadata": {
         "id": "UzJ9HHrV2Pga",
         "colab_type": "code",
-        "outputId": "e834e732-6d24-4136-f189-958d13879f4e",
+        "outputId": "cec58abb-df6e-4a09-d215-0f27a3bda69a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -951,10 +927,10 @@
         "player = 'Tom Brady'\n",
         "week = 17\n",
         "\n",
-        "week1_score, opp = scoring(player, week)\n",
-        "opp"
+        "week1_score, oppt = scoring(player, week)\n",
+        "oppt"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -966,7 +942,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 10
         }
       ]
     },
@@ -1064,7 +1040,7 @@
       "metadata": {
         "id": "0PzZfaK0XR0G",
         "colab_type": "code",
-        "outputId": "9bb471ea-cd21-44ca-d073-96e76d163c76",
+        "outputId": "668b3f7b-511e-4ac3-9d74-1893830c982f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 111
@@ -1073,7 +1049,7 @@
       "source": [
         "compare_df.head()"
       ],
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1175,7 +1151,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 14
         }
       ]
     },
@@ -1184,7 +1160,7 @@
       "metadata": {
         "id": "dn92i7Krc3s8",
         "colab_type": "code",
-        "outputId": "3eca8d0a-07a8-4dc4-b58b-8b9689e77671",
+        "outputId": "9e06d5d4-e4c8-43b3-9f3b-90c53c57a77f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 111
@@ -1193,7 +1169,7 @@
       "source": [
         "ranking_df.head()"
       ],
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1250,7 +1226,7 @@
               "      <td>NYJ</td>\n",
               "      <td>CLE</td>\n",
               "      <td>BAL</td>\n",
-              "      <td>None</td>\n",
+              "      <td>Bye</td>\n",
               "      <td>PHI</td>\n",
               "      <td>DAL</td>\n",
               "      <td>HOU</td>\n",
@@ -1265,7 +1241,7 @@
               "      <td>TAM</td>\n",
               "      <td>CIN</td>\n",
               "      <td>PIT</td>\n",
-              "      <td>None</td>\n",
+              "      <td>Bye</td>\n",
               "      <td>CLE</td>\n",
               "      <td>LAR</td>\n",
               "      <td>WAS</td>\n",
@@ -1287,7 +1263,7 @@
             "text/plain": [
               "            Player Week1 Week2 Week3 Week4  ... Week13 Week14 Week15 Week16 Week17\n",
               "0        Tom Brady   PIT   MIA   NYJ   BUF  ...    HOU    KAN    CIN    BUF    MIA\n",
-              "1  Jimmy Garoppolo   TAM   CIN   PIT  None  ...    BAL    NOR    ATL    LAR    SEA\n",
+              "1  Jimmy Garoppolo   TAM   CIN   PIT   Bye  ...    BAL    NOR    ATL    LAR    SEA\n",
               "\n",
               "[2 rows x 18 columns]"
             ]
@@ -1295,7 +1271,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 15
         }
       ]
     }
