--- a/Actuals_Defense.ipynb
+++ b/Actuals_Defense.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled71.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOJ0JLA/jSWlP4CjXbFgIvr",
+      "authorship_tag": "ABX9TyM9taUowDbuMB+rsEuas4Xj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,16 +57,16 @@
       "metadata": {
         "id": "IBh8BYMGLVTs",
         "colab_type": "code",
+        "outputId": "d8ca742c-5abc-4479-b359-43c5df859035",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "8adc85fd-d789-4201-dbd8-a86429007335"
+        }
       },
       "source": [
         "player_df.head()"
       ],
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -154,7 +154,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 3
         }
       ]
     },
@@ -163,16 +163,16 @@
       "metadata": {
         "id": "PG8osQo1Lxmz",
         "colab_type": "code",
+        "outputId": "d835fd65-03ab-46c7-8bce-952be01bf554",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "6159ee56-2158-41d1-b662-514e4e0b1e57"
+        }
       },
       "source": [
         "defense_df.head()"
       ],
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -364,7 +364,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 4
         }
       ]
     },
@@ -373,16 +373,16 @@
       "metadata": {
         "id": "PsjTmPwtL62U",
         "colab_type": "code",
+        "outputId": "6f6ef50b-74de-4a9f-9c33-42a081fc7428",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "0dd4a003-edff-4cca-bb67-b585b0ec0788"
+        }
       },
       "source": [
         "game_df.head()"
       ],
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -544,7 +544,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 5
         }
       ]
     },
@@ -556,32 +556,19 @@
         "colab": {}
       },
       "source": [
-        "# Pull the stats for the\n",
-        "def pull_stats(df, col, t, w):\n",
-        "    if (df[col].loc[(df['team']==t) & (df['week']==w)].empty):\n",
-        "        stat = 0\n",
+        "# Pull the stat for the defense_db team points\n",
+        "def pull_stats(df1, df2, t, y, w):\n",
+        "    t_points = df1[y].loc[(df1['team']==t) & (df1['week']==w)].iloc[0]\n",
+        "\n",
+        "    team_name = df2['v'].loc[(df2['seas']==int(y)) & (df2['wk']==w)].iloc[0]\n",
+        "    if team_name == t:\n",
+        "        p_points = df2['ptsv'].loc[(df2['seas']==int(y)) & (df2['wk']==w)].iloc[0]\n",
         "    else:\n",
-        "        stat = df[col].loc[(df['team']==t) & (df['week']==w)].iloc[0]\n",
-        "    return stat"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "0kj7WaYBNgk4",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def scoring(t, y, w):\n",
+        "        p_points = df2['ptsv'].loc[(df2['seas']==int(y)) & (df2['wk']==w)].iloc[0]\n",
         "\n",
-        "    # Defensive team fantasy points\n",
-        "    f_points = pull_stats(defense_df, y, t, w)\n",
-        "\n",
-        "    score = f_points\n",
-        "    return score"
+        "    d_points = t_points + p_points\n",
+        "    \n",
+        "    return d_points"
       ],
       "execution_count": 0,
       "outputs": []
@@ -591,35 +578,48 @@
       "metadata": {
         "id": "pys0ClTxOWdM",
         "colab_type": "code",
+        "outputId": "8c8c25e5-193c-49b9-b253-3ec91fd720fb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "635eab29-5cf8-4ea4-b829-33fd66f575a0"
+        }
       },
       "source": [
         "team = 'ARI'\n",
         "year = '2000'\n",
         "week = 1\n",
         "\n",
-        "weekly_score = scoring(team, year, week)\n",
-        "weekly_score"
+        "weekly_dpoints = pull_stats(defense_df, game_df, team, year, week)\n",
+        "weekly_dpoints"
       ],
-      "execution_count": 14,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "4"
+              "32"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 26
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L2784MfvQL7k",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
