--- a/Actuals_Defense.ipynb
+++ b/Actuals_Defense.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled71.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM9taUowDbuMB+rsEuas4Xj",
+      "authorship_tag": "ABX9TyMOWvAHMYMTDOweHzGKo/9D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -373,16 +373,16 @@
       "metadata": {
         "id": "PsjTmPwtL62U",
         "colab_type": "code",
-        "outputId": "6f6ef50b-74de-4a9f-9c33-42a081fc7428",
+        "outputId": "6348d7b4-31b6-452e-e818-373a66e1f93d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 545
         }
       },
       "source": [
-        "game_df.head()"
+        "game_df.head(16)"
       ],
-      "execution_count": 5,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -526,25 +526,256 @@
               "      <td>27</td>\n",
               "      <td>14</td>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>6</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>1</td>\n",
+              "      <td>SUN</td>\n",
+              "      <td>SEA</td>\n",
+              "      <td>MIA</td>\n",
+              "      <td>Pro Player Stadium</td>\n",
+              "      <td>89.0</td>\n",
+              "      <td>59.0</td>\n",
+              "      <td>13.0</td>\n",
+              "      <td>E</td>\n",
+              "      <td>Sunny</td>\n",
+              "      <td>Grass</td>\n",
+              "      <td>36.0</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>23</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>7</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>1</td>\n",
+              "      <td>SUN</td>\n",
+              "      <td>CHI</td>\n",
+              "      <td>MIN</td>\n",
+              "      <td>Metrodome</td>\n",
+              "      <td>65.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Dome</td>\n",
+              "      <td>AstroTurf</td>\n",
+              "      <td>47.0</td>\n",
+              "      <td>4.5</td>\n",
+              "      <td>27</td>\n",
+              "      <td>30</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>8</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>1</td>\n",
+              "      <td>SUN</td>\n",
+              "      <td>TB</td>\n",
+              "      <td>NE</td>\n",
+              "      <td>Foxboro Stadium</td>\n",
+              "      <td>71.0</td>\n",
+              "      <td>93.0</td>\n",
+              "      <td>5.0</td>\n",
+              "      <td>VAR</td>\n",
+              "      <td>Cloudy</td>\n",
+              "      <td>Grass</td>\n",
+              "      <td>35.5</td>\n",
+              "      <td>-3.0</td>\n",
+              "      <td>21</td>\n",
+              "      <td>16</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>9</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>1</td>\n",
+              "      <td>SUN</td>\n",
+              "      <td>DET</td>\n",
+              "      <td>NO</td>\n",
+              "      <td>Louisiana Superdome</td>\n",
+              "      <td>89.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Dome</td>\n",
+              "      <td>AstroTurf</td>\n",
+              "      <td>39.5</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>14</td>\n",
+              "      <td>10</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>10</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>1</td>\n",
+              "      <td>SUN</td>\n",
+              "      <td>ARI</td>\n",
+              "      <td>NYG</td>\n",
+              "      <td>Giants Stadium</td>\n",
+              "      <td>80.0</td>\n",
+              "      <td>79.0</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>VAR</td>\n",
+              "      <td>Partly Cloudy</td>\n",
+              "      <td>Grass</td>\n",
+              "      <td>40.0</td>\n",
+              "      <td>7.0</td>\n",
+              "      <td>16</td>\n",
+              "      <td>21</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>11</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>1</td>\n",
+              "      <td>SUN</td>\n",
+              "      <td>SD</td>\n",
+              "      <td>OAK</td>\n",
+              "      <td>Network Associates Coliseum</td>\n",
+              "      <td>64.0</td>\n",
+              "      <td>49.0</td>\n",
+              "      <td>10.0</td>\n",
+              "      <td>W</td>\n",
+              "      <td>Partly Cloudy</td>\n",
+              "      <td>Grass</td>\n",
+              "      <td>39.5</td>\n",
+              "      <td>7.0</td>\n",
+              "      <td>6</td>\n",
+              "      <td>9</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>12</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>1</td>\n",
+              "      <td>SUN</td>\n",
+              "      <td>BAL</td>\n",
+              "      <td>PIT</td>\n",
+              "      <td>Three Rivers Stadium</td>\n",
+              "      <td>74.0</td>\n",
+              "      <td>84.0</td>\n",
+              "      <td>8.0</td>\n",
+              "      <td>NW</td>\n",
+              "      <td>Partly Sunny</td>\n",
+              "      <td>AstroTurf</td>\n",
+              "      <td>37.0</td>\n",
+              "      <td>-3.0</td>\n",
+              "      <td>16</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>13</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>1</td>\n",
+              "      <td>SUN</td>\n",
+              "      <td>CAR</td>\n",
+              "      <td>WAS</td>\n",
+              "      <td>FedEx Field</td>\n",
+              "      <td>80.0</td>\n",
+              "      <td>98.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>CALM</td>\n",
+              "      <td>Mostly Cloudy</td>\n",
+              "      <td>Grass</td>\n",
+              "      <td>47.5</td>\n",
+              "      <td>10.0</td>\n",
+              "      <td>17</td>\n",
+              "      <td>20</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>14</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>1</td>\n",
+              "      <td>SN</td>\n",
+              "      <td>TEN</td>\n",
+              "      <td>BUF</td>\n",
+              "      <td>Ralph Wilson Stadium</td>\n",
+              "      <td>73.0</td>\n",
+              "      <td>78.0</td>\n",
+              "      <td>10.0</td>\n",
+              "      <td>S</td>\n",
+              "      <td>Mostly Cloudy</td>\n",
+              "      <td>AstroTurf</td>\n",
+              "      <td>40.5</td>\n",
+              "      <td>-1.0</td>\n",
+              "      <td>13</td>\n",
+              "      <td>16</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>15</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>1</td>\n",
+              "      <td>MN</td>\n",
+              "      <td>DEN</td>\n",
+              "      <td>STL</td>\n",
+              "      <td>Trans World Dome</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Dome</td>\n",
+              "      <td>AstroTurf</td>\n",
+              "      <td>49.5</td>\n",
+              "      <td>6.5</td>\n",
+              "      <td>36</td>\n",
+              "      <td>41</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15</th>\n",
+              "      <td>16</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>2</td>\n",
+              "      <td>SUN</td>\n",
+              "      <td>JAC</td>\n",
+              "      <td>BAL</td>\n",
+              "      <td>PSINet Stadium</td>\n",
+              "      <td>82.0</td>\n",
+              "      <td>72.0</td>\n",
+              "      <td>5.0</td>\n",
+              "      <td>SE</td>\n",
+              "      <td>Mostly Sunny</td>\n",
+              "      <td>Grass</td>\n",
+              "      <td>36.0</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>36</td>\n",
+              "      <td>39</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "   gid  seas  wk  day    v  ...       surf    ou  sprv  ptsv  ptsh\n",
-              "0    1  2000   1  SUN   SF  ...  AstroTurf  42.5   7.0    28    36\n",
-              "1    2  2000   1  SUN  JAC  ...      Grass  38.0 -10.0    27     7\n",
-              "2    3  2000   1  SUN  PHI  ...  AstroTurf  40.0   6.0    41    14\n",
-              "3    4  2000   1  SUN  NYJ  ...      Grass  36.0   2.5    20    16\n",
-              "4    5  2000   1  SUN  IND  ...      Grass  44.0  -3.0    27    14\n",
+              "    gid  seas  wk  day    v  ...       surf    ou  sprv  ptsv  ptsh\n",
+              "0     1  2000   1  SUN   SF  ...  AstroTurf  42.5   7.0    28    36\n",
+              "1     2  2000   1  SUN  JAC  ...      Grass  38.0 -10.0    27     7\n",
+              "2     3  2000   1  SUN  PHI  ...  AstroTurf  40.0   6.0    41    14\n",
+              "3     4  2000   1  SUN  NYJ  ...      Grass  36.0   2.5    20    16\n",
+              "4     5  2000   1  SUN  IND  ...      Grass  44.0  -3.0    27    14\n",
+              "5     6  2000   1  SUN  SEA  ...      Grass  36.0   3.0     0    23\n",
+              "6     7  2000   1  SUN  CHI  ...  AstroTurf  47.0   4.5    27    30\n",
+              "7     8  2000   1  SUN   TB  ...      Grass  35.5  -3.0    21    16\n",
+              "8     9  2000   1  SUN  DET  ...  AstroTurf  39.5   1.0    14    10\n",
+              "9    10  2000   1  SUN  ARI  ...      Grass  40.0   7.0    16    21\n",
+              "10   11  2000   1  SUN   SD  ...      Grass  39.5   7.0     6     9\n",
+              "11   12  2000   1  SUN  BAL  ...  AstroTurf  37.0  -3.0    16     0\n",
+              "12   13  2000   1  SUN  CAR  ...      Grass  47.5  10.0    17    20\n",
+              "13   14  2000   1   SN  TEN  ...  AstroTurf  40.5  -1.0    13    16\n",
+              "14   15  2000   1   MN  DEN  ...  AstroTurf  49.5   6.5    36    41\n",
+              "15   16  2000   2  SUN  JAC  ...      Grass  36.0   3.0    36    39\n",
               "\n",
-              "[5 rows x 17 columns]"
+              "[16 rows x 17 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 33
         }
       ]
     },
@@ -560,11 +791,13 @@
         "def pull_stats(df1, df2, t, y, w):\n",
         "    t_points = df1[y].loc[(df1['team']==t) & (df1['week']==w)].iloc[0]\n",
         "\n",
-        "    team_name = df2['v'].loc[(df2['seas']==int(y)) & (df2['wk']==w)].iloc[0]\n",
-        "    if team_name == t:\n",
-        "        p_points = df2['ptsv'].loc[(df2['seas']==int(y)) & (df2['wk']==w)].iloc[0]\n",
+        "    team_nameh = df2['h'].loc[(df2['seas']==int(y)) & (df2['wk']==w) & ((df2['v']==t) | (df2['h']==t))].iloc[0]\n",
+        "    team_namev = df2['v'].loc[(df2['seas']==int(y)) & (df2['wk']==w) & ((df2['v']==t) | (df2['h']==t))].iloc[0]\n",
+        "\n",
+        "    if team_nameh == t:\n",
+        "        p_points = df2['ptsh'].loc[(df2['seas']==int(y)) & (df2['wk']==w) & ((df2['v']==t) | (df2['h']==t))].iloc[0]\n",
         "    else:\n",
-        "        p_points = df2['ptsv'].loc[(df2['seas']==int(y)) & (df2['wk']==w)].iloc[0]\n",
+        "        p_points = df2['ptsv'].loc[(df2['seas']==int(y)) & (df2['wk']==w) & ((df2['v']==t) | (df2['h']==t))].iloc[0]\n",
         "\n",
         "    d_points = t_points + p_points\n",
         "    \n",
@@ -578,10 +811,10 @@
       "metadata": {
         "id": "pys0ClTxOWdM",
         "colab_type": "code",
-        "outputId": "8c8c25e5-193c-49b9-b253-3ec91fd720fb",
+        "outputId": "5efc0156-b3a7-4a8b-8ebb-42cda0c0e4b3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 68
         }
       },
       "source": [
@@ -592,19 +825,27 @@
         "weekly_dpoints = pull_stats(defense_df, game_df, team, year, week)\n",
         "weekly_dpoints"
       ],
-      "execution_count": 26,
+      "execution_count": 43,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "ARI\n",
+            "NYG\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "32"
+              "20"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 43
         }
       ]
     },
