--- a/Actuals_Defense.ipynb
+++ b/Actuals_Defense.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled71.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMFCrm52X/V1yDk+Ez6O9rW",
+      "authorship_tag": "ABX9TyNgZT4n3NPhvBCiVGPFG8IM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,6 +32,7 @@
         "colab": {}
       },
       "source": [
+        "# Imports\n",
         "import pandas as pd"
       ],
       "execution_count": 0,
@@ -45,6 +46,7 @@
         "colab": {}
       },
       "source": [
+        "# Load the raw data\n",
         "player_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/players.csv')\n",
         "defense_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/defense.csv')\n",
         "game_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/game.csv')"
@@ -57,16 +59,18 @@
       "metadata": {
         "id": "IBh8BYMGLVTs",
         "colab_type": "code",
-        "outputId": "c587b304-bdf1-4cde-b974-ce1abbfb3314",
+        "outputId": "bb6152ff-ffde-4b61-8dc8-dd32595a63f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
         }
       },
       "source": [
+        "# The players dataframe - defensive teams are considered a player in fantasy football\n",
+        "# The list of players is for all NFL players in the year 2019\n",
         "player_df.head()"
       ],
-      "execution_count": 30,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -154,37 +158,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 30
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "WFo3xEBWn62U",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "ef4a0320-1da7-4f18-f9d6-39857462f7ba"
-      },
-      "source": [
-        "player = 'SF'\n",
-        "first = player_df['first'].loc[(player_df['player']==player)].iloc[0]\n",
-        "last = player_df['last'].loc[(player_df['player']==player)].iloc[0]\n",
-        "name = player_df['name'].loc[(player_df['player']==player)].iloc[0]\n",
-        "position1 = player_df['position1'].loc[(player_df['player']==player)].iloc[0]\n",
-        "print(player, first, last, name, position1)"
-      ],
-      "execution_count": 37,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "SF San Francisco 49ers San Francisco 49ers DF\n"
-          ],
-          "name": "stdout"
+          "execution_count": 3
         }
       ]
     },
@@ -193,16 +167,18 @@
       "metadata": {
         "id": "PG8osQo1Lxmz",
         "colab_type": "code",
-        "outputId": "40b23a7c-e691-4cb9-a514-6d8c280a5c91",
+        "outputId": "0096dc18-8e29-4e2a-b347-accb8216804c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
         }
       },
       "source": [
+        "# The defense dataframe - raw data was aggregated by team in excel to summarize the team NFL.com points\n",
+        "# The NFL.com points represent the calculated fantasy football defensive points excluding the points-against calculations\n",
         "defense_df.head()"
       ],
-      "execution_count": 31,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -394,7 +370,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 4
         }
       ]
     },
@@ -403,16 +379,17 @@
       "metadata": {
         "id": "PsjTmPwtL62U",
         "colab_type": "code",
-        "outputId": "04994452-3a9f-42e3-891e-def2292a7834",
+        "outputId": "299be27c-cbaa-4892-a894-3f561f91621e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
         }
       },
       "source": [
+        "# The game dataframe - contains all the NFL games from 2000-2019\n",
         "game_df.head()"
       ],
-      "execution_count": 32,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -574,7 +551,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 5
         }
       ]
     },
@@ -585,18 +562,20 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 545
+          "height": 514
         },
-        "outputId": "80d9bfa3-62ec-414f-dd72-abfd72e90499"
+        "outputId": "2c04d452-eeb9-4b6f-ee68-22fcb2117439"
       },
       "source": [
+        "# The home and vistor team names need to be changed for SD-LAC and STL-LA\n",
+        "# These teams moved to different cities during the 2000-2019 seasons\n",
         "game_df['v'].replace('SD', 'LAC', inplace=True)\n",
         "game_df['v'].replace('STL', 'LA', inplace=True)\n",
         "game_df['h'].replace('SD', 'LAC', inplace=True)\n",
         "game_df['h'].replace('STL', 'LA', inplace=True)\n",
-        "game_df.head(16)"
+        "game_df.head(15)"
       ],
-      "execution_count": 34,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -940,26 +919,6 @@
               "      <td>36</td>\n",
               "      <td>41</td>\n",
               "    </tr>\n",
-              "    <tr>\n",
-              "      <th>15</th>\n",
-              "      <td>16</td>\n",
-              "      <td>2000</td>\n",
-              "      <td>2</td>\n",
-              "      <td>SUN</td>\n",
-              "      <td>JAC</td>\n",
-              "      <td>BAL</td>\n",
-              "      <td>PSINet Stadium</td>\n",
-              "      <td>82.0</td>\n",
-              "      <td>72.0</td>\n",
-              "      <td>5.0</td>\n",
-              "      <td>SE</td>\n",
-              "      <td>Mostly Sunny</td>\n",
-              "      <td>Grass</td>\n",
-              "      <td>36.0</td>\n",
-              "      <td>3.0</td>\n",
-              "      <td>36</td>\n",
-              "      <td>39</td>\n",
-              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
@@ -981,15 +940,14 @@
               "12   13  2000   1  SUN  CAR  ...      Grass  47.5  10.0    17    20\n",
               "13   14  2000   1   SN  TEN  ...  AstroTurf  40.5  -1.0    13    16\n",
               "14   15  2000   1   MN  DEN  ...  AstroTurf  49.5   6.5    36    41\n",
-              "15   16  2000   2  SUN  JAC  ...      Grass  36.0   3.0    36    39\n",
               "\n",
-              "[16 rows x 17 columns]"
+              "[15 rows x 17 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 6
         }
       ]
     },
@@ -1001,7 +959,7 @@
         "colab": {}
       },
       "source": [
-        "# Pull the stats to calculate the defense_db team points\n",
+        "# Pull the stats to calculate the defense_db team points - NFL.coom points + points against calculations\n",
         "def pull_stats(df1, df2, t, y, w, g):\n",
         "\n",
         "    t_points = df1[y].loc[(df1['team']==t) & (df1['week']==g)].iloc[0]\n",
@@ -1039,153 +997,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pys0ClTxOWdM",
-        "colab_type": "code",
-        "outputId": "3e68219a-c137-4afd-9e78-09e74c0c61d7",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "team = 'SF'\n",
-        "year = '2000'\n",
-        "week = 14\n",
-        "game = 13\n",
-        "\n",
-        "weekly_dpoints = pull_stats(defense_df, game_df, team, year, week, game)\n",
-        "weekly_dpoints"
-      ],
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "19"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 20
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "qhFNOAMdjStZ",
-        "colab_type": "code",
-        "outputId": "2b0e66ae-d871-441e-9a85-16c15761afdc",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 204
-        }
-      },
-      "source": [
-        "player_df.head()"
-      ],
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>player</th>\n",
-              "      <th>first</th>\n",
-              "      <th>last</th>\n",
-              "      <th>name</th>\n",
-              "      <th>position1</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>SF</td>\n",
-              "      <td>San Francisco</td>\n",
-              "      <td>49ers</td>\n",
-              "      <td>San Francisco 49ers</td>\n",
-              "      <td>DF</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>CHI</td>\n",
-              "      <td>Chicago</td>\n",
-              "      <td>Bears</td>\n",
-              "      <td>Chicago Bears</td>\n",
-              "      <td>DF</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>CIN</td>\n",
-              "      <td>Cincinnati</td>\n",
-              "      <td>Bengals</td>\n",
-              "      <td>Cincinnati Bengals</td>\n",
-              "      <td>DF</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>BUF</td>\n",
-              "      <td>Buffalo</td>\n",
-              "      <td>Bills</td>\n",
-              "      <td>Buffalo Bills</td>\n",
-              "      <td>DF</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>DEN</td>\n",
-              "      <td>Denver</td>\n",
-              "      <td>Broncos</td>\n",
-              "      <td>Denver Broncos</td>\n",
-              "      <td>DF</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "  player          first     last                 name position1\n",
-              "0     SF  San Francisco    49ers  San Francisco 49ers        DF\n",
-              "1    CHI        Chicago    Bears        Chicago Bears        DF\n",
-              "2    CIN     Cincinnati  Bengals   Cincinnati Bengals        DF\n",
-              "3    BUF        Buffalo    Bills        Buffalo Bills        DF\n",
-              "4    DEN         Denver  Broncos       Denver Broncos        DF"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 21
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "L2784MfvQL7k",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
+        "# Add a row to the final_df dataframe\n",
+        "# Each row represents the actual defense points for each game for each player (team)\n",
         "def add_row(df, p, f, l, n, pos, value_list):\n",
         "\n",
         "    df = df.append({'player': p,\n",
@@ -1528,6 +1346,8 @@
         "colab": {}
       },
       "source": [
+        "# The main code for iterating through the team list, calculating the points and adding the rows\n",
+        "# to the final_df dataframe.\n",
         "column_names = ['player',\n",
         "                'first',\n",
         "                'last',\n",
@@ -1870,16 +1690,6 @@
         "    position1 = player_df['position1'].loc[(player_df['player']==player)].iloc[0]\n",
         "\n",
         "    team = player\n",
-        "\n",
-        "#player = 'SF'\n",
-        "#first = 'San Francisco'\n",
-        "#last = '49ers'\n",
-        "#name = 'San Francisco 49ers'\n",
-        "#position1 = 'DF'\n",
-        "\n",
-        "#team = 'HOU'\n",
-        "\n",
-        "\n",
         "    player_scores = []\n",
         "\n",
         "    for i in range(2000,2020):\n",
@@ -1912,16 +1722,17 @@
       "metadata": {
         "id": "-j_4tO9KAzRH",
         "colab_type": "code",
-        "outputId": "76014c71-a2e1-45dc-b8b7-cac0b26e9a50",
+        "outputId": "2134aacf-768d-41e4-98d6-d57cfe09435b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         }
       },
       "source": [
+        "# The final results\n",
         "final_df.head(50)"
       ],
-      "execution_count": 42,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4763,7 +4574,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 10
         }
       ]
     },
@@ -4775,6 +4586,7 @@
         "colab": {}
       },
       "source": [
+        "# Save the results to .csv file\n",
         "final_df.to_csv('/content/actuals_defense.csv', index=False)"
       ],
       "execution_count": 0,
